--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,8 @@
   </script>
   <script>
 
-  $('#image').prepend('<img id="image" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
+//  $('#image').prepend('<img id="image" src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif" />')
+  $('#image').prepend($('<img>',{id:'image',src:'https://s3.amazonaws.com/learn-verified/painting-with-dog.gif'}))
 
 
   </script>
